removed test pages and extra controllers to simplify project